k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: gameforge
    environment: production
  name: gameforge
