k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  name: gameforge-ingress
  namespace: gameforge
spec:
  rules:
  - host: api.gameforge.ai
    http:
      paths:
      - backend:
          service:
            name: gameforge-api-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.gameforge.ai
    secretName: gameforge-tls
